--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery with Filter</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Image Gallery</h1>
@@ -24,6 +24,6 @@
     <img src="images/tech2.jpg" alt="Tech" class="image tech">
 </div>
 
-<script src="scripts/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
